--- a/VidCoder/Resources/Translations/CommonRes.es.resx
+++ b/VidCoder/Resources/Translations/CommonRes.es.resx
@@ -148,6 +148,7 @@ Una copia completa de la Licencia Publica General de GNU se ha incluido junto co
   </data>
   <data name="QueueColumnNameTitle" xml:space="preserve">
     <value>Título</value>
+    <comment>The label for the queue column that shows the title number. For DVDs or Blu-rays this identifies which title on the disc will be encoded. For files this is usually 1.</comment>
   </data>
   <data name="QueueColumnNameAudioQuality" xml:space="preserve">
     <value>Calidad de audio</value>
