--- a/VidCoder/Resources/Translations/CommonRes.eu.resx
+++ b/VidCoder/Resources/Translations/CommonRes.eu.resx
@@ -148,6 +148,7 @@ GNU Baimen Publiko Orokorraren kopia oso bat barneratu da programa honekin bater
   </data>
   <data name="QueueColumnNameTitle" xml:space="preserve">
     <value>Izenburua</value>
+    <comment>The label for the queue column that shows the title number. For DVDs or Blu-rays this identifies which title on the disc will be encoded. For files this is usually 1.</comment>
   </data>
   <data name="QueueColumnNameAudioQuality" xml:space="preserve">
     <value>Audio Ontasuna</value>
