--- a/VidCoder/Resources/Translations/CommonRes.hu.resx
+++ b/VidCoder/Resources/Translations/CommonRes.hu.resx
@@ -148,6 +148,7 @@ A full copy of the GNU General Public License has been included along with this 
   </data>
   <data name="QueueColumnNameTitle" xml:space="preserve">
     <value>Cím</value>
+    <comment>The label for the queue column that shows the title number. For DVDs or Blu-rays this identifies which title on the disc will be encoded. For files this is usually 1.</comment>
   </data>
   <data name="QueueColumnNameAudioQuality" xml:space="preserve">
     <value>Hangminőség</value>
