--- a/VidCoder/Resources/Translations/CommonRes.id.resx
+++ b/VidCoder/Resources/Translations/CommonRes.id.resx
@@ -148,6 +148,7 @@ Sebuah salinan lengkap dari GNU General Public License telah disertakan bersama 
   </data>
   <data name="QueueColumnNameTitle" xml:space="preserve">
     <value>Judul</value>
+    <comment>The label for the queue column that shows the title number. For DVDs or Blu-rays this identifies which title on the disc will be encoded. For files this is usually 1.</comment>
   </data>
   <data name="QueueColumnNameAudioQuality" xml:space="preserve">
     <value>Kualitas Audio</value>
