--- a/VidCoder/Resources/Translations/CommonRes.pl.resx
+++ b/VidCoder/Resources/Translations/CommonRes.pl.resx
@@ -148,6 +148,7 @@ Pełna kopia licencji GNU General Public została dołączona do tego programu.<
   </data>
   <data name="QueueColumnNameTitle" xml:space="preserve">
     <value>Tytuł</value>
+    <comment>The label for the queue column that shows the title number. For DVDs or Blu-rays this identifies which title on the disc will be encoded. For files this is usually 1.</comment>
   </data>
   <data name="QueueColumnNameAudioQuality" xml:space="preserve">
     <value>Jakość dźwięku</value>
