--- a/VidCoder/Resources/Translations/CommonRes.pt-BR.resx
+++ b/VidCoder/Resources/Translations/CommonRes.pt-BR.resx
@@ -148,6 +148,7 @@ Uma cópia completa da Licença Pública Geral GNU foi incluída neste programa.
   </data>
   <data name="QueueColumnNameTitle" xml:space="preserve">
     <value>Título</value>
+    <comment>The label for the queue column that shows the title number. For DVDs or Blu-rays this identifies which title on the disc will be encoded. For files this is usually 1.</comment>
   </data>
   <data name="QueueColumnNameAudioQuality" xml:space="preserve">
     <value>Qualidade do áudio</value>
