--- a/VidCoder/Resources/Translations/CommonRes.ru.resx
+++ b/VidCoder/Resources/Translations/CommonRes.ru.resx
@@ -144,6 +144,7 @@
   </data>
   <data name="QueueColumnNameTitle" xml:space="preserve">
     <value>Название</value>
+    <comment>The label for the queue column that shows the title number. For DVDs or Blu-rays this identifies which title on the disc will be encoded. For files this is usually 1.</comment>
   </data>
   <data name="QueueColumnNameAudioQuality" xml:space="preserve">
     <value>Качество звука</value>
