--- a/VidCoder/Resources/Translations/CommonRes.tr.resx
+++ b/VidCoder/Resources/Translations/CommonRes.tr.resx
@@ -148,6 +148,7 @@ GNU General Public License kopyası bu programa dahil edilmiştir.</value>
   </data>
   <data name="QueueColumnNameTitle" xml:space="preserve">
     <value>Başlık</value>
+    <comment>The label for the queue column that shows the title number. For DVDs or Blu-rays this identifies which title on the disc will be encoded. For files this is usually 1.</comment>
   </data>
   <data name="QueueColumnNameAudioQuality" xml:space="preserve">
     <value>Ses Kalitesi</value>
