--- a/VidCoder/Resources/Translations/CommonRes.zh-Hant.resx
+++ b/VidCoder/Resources/Translations/CommonRes.zh-Hant.resx
@@ -148,6 +148,7 @@
   </data>
   <data name="QueueColumnNameTitle" xml:space="preserve">
     <value>標題</value>
+    <comment>The label for the queue column that shows the title number. For DVDs or Blu-rays this identifies which title on the disc will be encoded. For files this is usually 1.</comment>
   </data>
   <data name="QueueColumnNameAudioQuality" xml:space="preserve">
     <value>音訊品質</value>
