--- a/VidCoder/Resources/Translations/MainRes.de.resx
+++ b/VidCoder/Resources/Translations/MainRes.de.resx
@@ -221,7 +221,7 @@
     <value>Stoppen</value>
   </data>
   <data name="Pause" xml:space="preserve">
-    <value>Pause</value>
+    <value>Pausieren</value>
   </data>
   <data name="MoveToTopMenuItem" xml:space="preserve">
     <value>Nach oben verschieben</value>
@@ -308,7 +308,7 @@
     <value>Encodierung beendet.</value>
   </data>
   <data name="DeleteSourceFilesConfirmationMessage" xml:space="preserve">
-    <value>Sind Sie sicher, dass Sie die Quelldatei(en)/Ordner {0} löschen möchten?</value>
+    <value>Sind Sie sicher, dass Sie die Quelldatei(en)/-Ordner {0} löschen möchten?</value>
   </data>
   <data name="DeleteSourceFilesConfirmationTitle" xml:space="preserve">
     <value>Wirklich löschen?</value>
@@ -338,7 +338,7 @@
     <value>VidCoder hat alle Encodierungsaufträge aus der Warteschlange fertig gestellt.</value>
   </data>
   <data name="OutputFolderRequiredMessage" xml:space="preserve">
-    <value>Es kann kein Encodierungsauftrag erstellt werden ohne, dass ein Ausgabeordner als Standard festgelegt wurde. Drücken Sie OK, um einen auszuwählen.</value>
+    <value>Encodierungsaufträge können nicht erstellt werden, solange es keinen Standard-Ausgabeordner gibt. Drücken Sie OK, um einen auszuwählen.</value>
   </data>
   <data name="OutputFolderRequiredTitle" xml:space="preserve">
     <value>Ein Standard-Ausgabeordner ist erforderlich</value>
@@ -358,7 +358,9 @@
   <data name="EtaLabel" xml:space="preserve">
     <value>ETA:</value>
   </data>
-  
+  <data name="WhenDoneLabel" xml:space="preserve">
+    <value>Nach Abschluss</value>
+  </data>
   <data name="SourceOption_VideoFile" xml:space="preserve">
     <value>Video-Datei...</value>
   </data>
@@ -543,7 +545,7 @@
     <comment>The template for automatically named Pickers. For example Picker 1, Picker 2, etc.</comment>
   </data>
   <data name="SimilarTitlesToolTip" xml:space="preserve">
-    <value>{0} andere Titel dauern fast genauso lang wie dieser.</value>
+    <value>{0} andere Titel haben eine ähnliche Laufzeit.</value>
     <comment>{0} is the number of titles that have a similar duration.</comment>
   </data>
   <data name="UseBackupDatabaseLine" xml:space="preserve">
@@ -573,34 +575,105 @@
     <comment>Used on the "completed encodes" tab, to label the column that shows the final output file size.</comment>
   </data>
   <data name="OpenAppDataFolder" xml:space="preserve">
-    <value>AppData Ordner öffnen</value>
+    <value>AppData-Ordner öffnen</value>
     <comment>Menu choice for opening the application data folder (that holds the VidCoder database file, logs, etc)</comment>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="RibbonEncodingGroupLabel" xml:space="preserve">
+    <value>Encodierung</value>
+  </data>
+  <data name="RibbonSettingsGroupLabel" xml:space="preserve">
+    <value>Einstellungen</value>
+  </data>
+  <data name="GlobalOptionsLabel" xml:space="preserve">
+    <value>Globale Einstellungen</value>
+  </data>
+  <data name="EncodingSettingsButton" xml:space="preserve">
+    <value>Encodierungseinstellungen: {0}</value>
+    <comment>{0} is a placeholder for the name of the encoding preset currently selected.</comment>
+  </data>
+  <data name="EncodingSettingsButtonToolTip" xml:space="preserve">
+    <value>Video- und Audiocodecs, Abmessungen, Filter, Container</value>
+  </data>
+  <data name="OpenSourceRibbonButton" xml:space="preserve">
+    <value>Quelle öffnen</value>
+  </data>
+  <data name="ImportExportRibbonButton" xml:space="preserve">
+    <value>Importieren/Exportieren</value>
+    <comment>Label for ribbon button to import or export presets or queues</comment>
+  </data>
+  <data name="AddedSubtitleFromFile" xml:space="preserve">
+    <value>Untertitel aus Datei {0} wurde erfolgreich hinzugefügt</value>
+  </data>
+  <data name="OpenFormat" xml:space="preserve">
+    <value>Öffne {0}</value>
+    <comment>Format for opening a source. For example: "Open E:\ - THE_INCREDIBLES"</comment>
+  </data>
+  <data name="NoAudioDescription" xml:space="preserve">
+    <value>Es wurden keine Audiospuren in der Quelle gefunden.</value>
+  </data>
+  <data name="NoAudioSummary" xml:space="preserve">
+    <value>Keine Audiospuren</value>
+    <comment>Summary text for when no audio tracks are found on the source</comment>
+  </data>
+  <data name="NoSubtitlesSummary" xml:space="preserve">
+    <value>Keine Untertitelspuren</value>
+    <comment>Summary text for when no subtitle tracks are found on the source and no external subtitles have been added</comment>
+  </data>
+  <data name="DataTooOldRunVidCoderVersion" xml:space="preserve">
+    <value>Ihre Daten sind zu alt für ein direktes Update. Starten Sie VidCoder {0} einmal, um es zunächst auf eine noch kompatible Version zu aktualisieren, und versuchen Sie es dann erneut.</value>
+    <comment>This is shown on app start when old data is detected.</comment>
+  </data>
+  <data name="BitrateColumn" xml:space="preserve">
+    <value>Bitrate</value>
+  </data>
+  <data name="SampleRateColumn" xml:space="preserve">
+    <value>Abtastrate</value>
+  </data>
+  <data name="ClearRecentFilesButtonToolTip" xml:space="preserve">
+    <value>"Zuletzt geöffnet" leeren</value>
+  </data>
+  <data name="OpenSourceLabel" xml:space="preserve">
+    <value>Öffnen</value>
+    <comment>Label on top of the different options for opening video source on the startup screen.</comment>
+  </data>
+  <data name="ScanningSourceLabelFormat" xml:space="preserve">
+    <value>Scanne {0}...</value>
+    <comment>{0} is the name of the source being scanned.</comment>
+  </data>
+  <data name="RetryFailedItemsMenuItem" xml:space="preserve">
+    <value>Alle fehlgeschlagenen Aufträge nochmal versuchen</value>
+  </data>
+  <data name="StartChapterAutomationName" xml:space="preserve">
+    <value>Anfangskapitel</value>
+    <comment>Narrator label for the chapter start combo box</comment>
+  </data>
+  <data name="EndChapterAutomationName" xml:space="preserve">
+    <value>Endkapitel</value>
+    <comment>Narrator label for the end chapter combo box</comment>
+  </data>
+  <data name="EditChaptersButtonAutomationName" xml:space="preserve">
+    <value>Kapitel bearbeiten</value>
+    <comment>Help text for screen readers for the Edit chapters button</comment>
+  </data>
+  <data name="TitleFilterRangeStartAutomationName" xml:space="preserve">
+    <value>Titelauswahl minimale Laufzeit in Minuten</value>
+    <comment>Screen reader text for number box that represents the start of the filter range in minutes. The number chosen in this box represents the minimum title length in minutes that will be chosen.</comment>
+  </data>
+  <data name="ApplyCurrentEncodingSettings" xml:space="preserve">
+    <value>Aktuelle Encodierungseinstellungen anwenden</value>
+  </data>
+  <data name="OpenSourceFolderOption" xml:space="preserve">
+    <value>Quell-Ordner öffnen</value>
+    <comment>Menu option to open the folder of the source file in the queue</comment>
+  </data>
+  <data name="WithCurrentJobsFormat" xml:space="preserve">
+    <value>bei den aktuellen Aufträgen: {0}</value>
+    <comment>Shown as options for the "When done" combo box for actions that trigger when currently encoding job(s) complete. This string is only used when there are multiple items queued.
+{0} is the encode complete action, ex "Shut down"</comment>
+  </data>
+  <data name="WithQueueFormat" xml:space="preserve">
+    <value>bei der Warteschlange: {0}</value>
+    <comment>Shown as options for the "When done" combo box for actions that trigger on queue completion. This string is only used when there are multiple items queued.
+{0} is the encode complete action, ex "Shut down"</comment>
+  </data>
 </root>
