--- a/VidCoder/Resources/Translations/MainRes.eu.resx
+++ b/VidCoder/Resources/Translations/MainRes.eu.resx
@@ -625,6 +625,7 @@
   </data>
   <data name="DataTooOldRunVidCoderVersion" xml:space="preserve">
     <value>Zure datuak oso zaharrak dira eguneratzeko. Ekin VidCoder {0} behin eguneratzeko bertsio bateragarri batera, orduan saiatu bertsio honekin berriro.</value>
+    <comment>This is shown on app start when old data is detected.</comment>
   </data>
   <data name="BitrateColumn" xml:space="preserve">
     <value>Bitneurria</value>
@@ -671,12 +672,12 @@
   </data>
   <data name="WithCurrentJobsFormat" xml:space="preserve">
     <value>uneko lan(ar)ekin: {0}</value>
-    <comment>Shown as options for the "When done" combo box for actions that trigger when currently encoding job(s) complete.
+    <comment>Shown as options for the "When done" combo box for actions that trigger when currently encoding job(s) complete. This string is only used when there are multiple items queued.
 {0} is the encode complete action, ex "Shut down"</comment>
   </data>
   <data name="WithQueueFormat" xml:space="preserve">
     <value>lerroarekin: {0}</value>
-    <comment>Shown as options for the "When done" combo box for actions that trigger on queue completion.
+    <comment>Shown as options for the "When done" combo box for actions that trigger on queue completion. This string is only used when there are multiple items queued.
 {0} is the encode complete action, ex "Shut down"</comment>
   </data>
 </root>
