--- a/VidCoder/Resources/Translations/MainRes.id.resx
+++ b/VidCoder/Resources/Translations/MainRes.id.resx
@@ -619,6 +619,7 @@
   </data>
   <data name="DataTooOldRunVidCoderVersion" xml:space="preserve">
     <value>Data Anda sudah terlalu tua untuk meng-upgrade. Menjalankan VidCoder {0} sekali untuk meng-upgrade ke versi yang kompatibel, kemudian coba versi ini lagi.</value>
+    <comment>This is shown on app start when old data is detected.</comment>
   </data>
   <data name="BitrateColumn" xml:space="preserve">
     <value>Bitrate</value>
@@ -665,12 +666,12 @@
   </data>
   <data name="WithCurrentJobsFormat" xml:space="preserve">
     <value>dengan proyek saat ini: {0}</value>
-    <comment>Shown as options for the "When done" combo box for actions that trigger when currently encoding job(s) complete.
+    <comment>Shown as options for the "When done" combo box for actions that trigger when currently encoding job(s) complete. This string is only used when there are multiple items queued.
 {0} is the encode complete action, ex "Shut down"</comment>
   </data>
   <data name="WithQueueFormat" xml:space="preserve">
     <value>dengan antrian: {0}</value>
-    <comment>Shown as options for the "When done" combo box for actions that trigger on queue completion.
+    <comment>Shown as options for the "When done" combo box for actions that trigger on queue completion. This string is only used when there are multiple items queued.
 {0} is the encode complete action, ex "Shut down"</comment>
   </data>
 </root>
