--- a/VidCoder/Resources/Translations/MainRes.zh.resx
+++ b/VidCoder/Resources/Translations/MainRes.zh.resx
@@ -275,7 +275,7 @@
     <value>预设：</value>
   </data>
   <data name="DestinationColumnHeader" xml:space="preserve">
-    <value>输出位置:</value>
+    <value>输出位置</value>
   </data>
   <data name="StatusColumnHeader" xml:space="preserve">
     <value>状态</value>
@@ -339,10 +339,10 @@
     <value>编码完成</value>
   </data>
   <data name="EncodeCompleteBalloonMessage" xml:space="preserve">
-    <value>VidCoder 已完编码队列。</value>
+    <value>VidCoder 已完队列中所有编码作业。</value>
   </data>
   <data name="OutputFolderRequiredMessage" xml:space="preserve">
-    <value>未设定默认输出文件夹无法添加编码任务，请点击确定来进行选择。</value>
+    <value>未设定默认输出文件夹无法添加编码作业，请点击确定来进行选择。</value>
   </data>
   <data name="OutputFolderRequiredTitle" xml:space="preserve">
     <value>必须设置默认输出文件夹</value>
@@ -362,7 +362,9 @@
   <data name="EtaLabel" xml:space="preserve">
     <value>预估完成时间：</value>
   </data>
-  
+  <data name="WhenDoneLabel" xml:space="preserve">
+    <value>完成后</value>
+  </data>
   <data name="SourceOption_VideoFile" xml:space="preserve">
     <value>视频文件...</value>
   </data>
@@ -379,16 +381,16 @@
     <value>未应用更新。若您并非手动取消更新，请尝试手动安装。</value>
   </data>
   <data name="CouldNotLoadPresetMessage" xml:space="preserve">
-    <value>无法加载预设: </value>
+    <value>无法加载预设：</value>
   </data>
   <data name="CouldNotSavePresetMessage" xml:space="preserve">
-    <value>不能保存预设 '{0}': {1} {2}</value>
+    <value>不能保存预设 '{0}':{1}{2}</value>
   </data>
   <data name="CouldNotCopyTextError" xml:space="preserve">
     <value>无法复制文本。</value>
   </data>
   <data name="LaunchUrlError" xml:space="preserve">
-    <value>打开 URL 时出错: {0}</value>
+    <value>打开 URL 时出错：{0}</value>
   </data>
   <data name="PresetImportErrorMessage" xml:space="preserve">
     <value>无法导入预设。请检查日志详情。</value>
@@ -578,31 +580,102 @@
     <value>打开程序资料文件夹</value>
     <comment>Menu choice for opening the application data folder (that holds the VidCoder database file, logs, etc)</comment>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="RibbonEncodingGroupLabel" xml:space="preserve">
+    <value>编码</value>
+  </data>
+  <data name="RibbonSettingsGroupLabel" xml:space="preserve">
+    <value>设置</value>
+  </data>
+  <data name="GlobalOptionsLabel" xml:space="preserve">
+    <value>全局选项</value>
+  </data>
+  <data name="EncodingSettingsButton" xml:space="preserve">
+    <value>编码设置：{0}</value>
+    <comment>{0} is a placeholder for the name of the encoding preset currently selected.</comment>
+  </data>
+  <data name="EncodingSettingsButtonToolTip" xml:space="preserve">
+    <value>视频和音频编解码器、尺寸、过滤器、容器</value>
+  </data>
+  <data name="OpenSourceRibbonButton" xml:space="preserve">
+    <value>打开源文件</value>
+  </data>
+  <data name="ImportExportRibbonButton" xml:space="preserve">
+    <value>导入/导出</value>
+    <comment>Label for ribbon button to import or export presets or queues</comment>
+  </data>
+  <data name="AddedSubtitleFromFile" xml:space="preserve">
+    <value>已成功从文件 {0} 中添加字幕</value>
+  </data>
+  <data name="OpenFormat" xml:space="preserve">
+    <value>打开 {0}</value>
+    <comment>Format for opening a source. For example: "Open E:\ - THE_INCREDIBLES"</comment>
+  </data>
+  <data name="NoAudioDescription" xml:space="preserve">
+    <value>源文件中未发现音频。</value>
+  </data>
+  <data name="NoAudioSummary" xml:space="preserve">
+    <value>无音频</value>
+    <comment>Summary text for when no audio tracks are found on the source</comment>
+  </data>
+  <data name="NoSubtitlesSummary" xml:space="preserve">
+    <value>无字幕</value>
+    <comment>Summary text for when no subtitle tracks are found on the source and no external subtitles have been added</comment>
+  </data>
+  <data name="DataTooOldRunVidCoderVersion" xml:space="preserve">
+    <value>您的数据太旧, 无法升级。先运行一次 vidcoder {0} 来升级到可兼容的版本, 然后再次尝试此版本。</value>
+    <comment>This is shown on app start when old data is detected.</comment>
+  </data>
+  <data name="BitrateColumn" xml:space="preserve">
+    <value>比特率</value>
+  </data>
+  <data name="SampleRateColumn" xml:space="preserve">
+    <value>采样率</value>
+  </data>
+  <data name="ClearRecentFilesButtonToolTip" xml:space="preserve">
+    <value>清除最近的文件</value>
+  </data>
+  <data name="OpenSourceLabel" xml:space="preserve">
+    <value>打开</value>
+    <comment>Label on top of the different options for opening video source on the startup screen.</comment>
+  </data>
+  <data name="ScanningSourceLabelFormat" xml:space="preserve">
+    <value>正在扫描 {0}...</value>
+    <comment>{0} is the name of the source being scanned.</comment>
+  </data>
+  <data name="RetryFailedItemsMenuItem" xml:space="preserve">
+    <value>重试所有失败项目</value>
+  </data>
+  <data name="StartChapterAutomationName" xml:space="preserve">
+    <value>起始章节</value>
+    <comment>Narrator label for the chapter start combo box</comment>
+  </data>
+  <data name="EndChapterAutomationName" xml:space="preserve">
+    <value>结束章节</value>
+    <comment>Narrator label for the end chapter combo box</comment>
+  </data>
+  <data name="EditChaptersButtonAutomationName" xml:space="preserve">
+    <value>编辑章节</value>
+    <comment>Help text for screen readers for the Edit chapters button</comment>
+  </data>
+  <data name="TitleFilterRangeStartAutomationName" xml:space="preserve">
+    <value>标题筛选范围起始时间（分）</value>
+    <comment>Screen reader text for number box that represents the start of the filter range in minutes. The number chosen in this box represents the minimum title length in minutes that will be chosen.</comment>
+  </data>
+  <data name="ApplyCurrentEncodingSettings" xml:space="preserve">
+    <value>应用当前编码设置</value>
+  </data>
+  <data name="OpenSourceFolderOption" xml:space="preserve">
+    <value>打开源文件夹</value>
+    <comment>Menu option to open the folder of the source file in the queue</comment>
+  </data>
+  <data name="WithCurrentJobsFormat" xml:space="preserve">
+    <value>当前作业：{0}</value>
+    <comment>Shown as options for the "When done" combo box for actions that trigger when currently encoding job(s) complete. This string is only used when there are multiple items queued.
+{0} is the encode complete action, ex "Shut down"</comment>
+  </data>
+  <data name="WithQueueFormat" xml:space="preserve">
+    <value>当前队列：{0}</value>
+    <comment>Shown as options for the "When done" combo box for actions that trigger on queue completion. This string is only used when there are multiple items queued.
+{0} is the encode complete action, ex "Shut down"</comment>
+  </data>
 </root>
