--- a/VidCoder/Resources/Translations/SubtitleRes.de.resx
+++ b/VidCoder/Resources/Translations/SubtitleRes.de.resx
@@ -168,6 +168,11 @@
   <data name="SubtitleCharsetDetectionFailedMessage" xml:space="preserve">
     <value>Konnte die Encodierung der Untertiteldatei nicht erkennen. Versuchen Sie die Datei erneut abzuspeichern und zwar als UTF-8.</value>
   </data>
-  
-  
+  <data name="NoSubtitlesText" xml:space="preserve">
+    <value>Es wurden keine Untertitelspuren in der Quelle gefunden.</value>
+  </data>
+  <data name="ExternalSubtitlesSummaryFormat" xml:space="preserve">
+    <value>{0} externe</value>
+    <comment>{0} is the number of external subtitle tracks included. e.g. "5 external"</comment>
+  </data>
 </root>
