--- a/VidCoder/Resources/Translations/MainRes.pt-BR.resx
+++ b/VidCoder/Resources/Translations/MainRes.pt-BR.resx
@@ -595,7 +595,7 @@
     <value>Codecs de áudio e vídeo, dimensionamento, filtros, recipiente</value>
   </data>
   <data name="OpenSourceRibbonButton" xml:space="preserve">
-    <value>Código Aberto</value>
+    <value>Abrir Fonte</value>
   </data>
   <data name="ImportExportRibbonButton" xml:space="preserve">
     <value>Importar/Exportar</value>
