--- a/VidCoder/Resources/Translations/CommonRes.es.resx
+++ b/VidCoder/Resources/Translations/CommonRes.es.resx
@@ -289,11 +289,28 @@ Una copia completa de la Licencia Publica General de GNU se ha incluido junto co
     <value>Quitar esta pista</value>
     <comment>Tip for button to remove the audio or subtitle track.</comment>
   </data>
-  
-  
-  
-  
-  
+  <data name="SelectedOverTotalAudioTracksFormat" xml:space="preserve">
+    <value>{0}/{1} pista(s) de audio</value>
+    <comment>{0} is the number of selected audio tracks and {1} is the number of total tracks on the source.</comment>
+  </data>
+  <data name="SelectedOverTotalSubtitleTracksFormat" xml:space="preserve">
+    <value>{0}/{1} subtitulo(s)</value>
+    <comment>{0} is the number of selected subtitle tracks and {1} is the number of total tracks on the source.</comment>
+  </data>
+  <data name="NumberBoxIncreaseButtonAutomationTextFormat" xml:space="preserve">
+    <value>Incremento {0}</value>
+    <comment>Automation text for the increase button on the number box.
+{0} - The name of the value the control is changing, for example "width"</comment>
+  </data>
+  <data name="NumberBoxDecreaseButtonAutomationTextFormat" xml:space="preserve">
+    <value>Decremento {0}</value>
+    <comment>Automation text for the decrease button on the number box.
+{0} - The name of the value the control is changing, for example "width"</comment>
+  </data>
+  <data name="OpenSplitButtonAutomationName" xml:space="preserve">
+    <value>Abrir el botón de división</value>
+    <comment>Automation name for screen readers for the "open" arrow on a split button</comment>
+  </data>
   <data name="Unknown" xml:space="preserve">
     <value>Desconocido</value>
     <comment>Used when a value is not known.</comment>
