--- a/VidCoder/Resources/OptionsRes.resx
+++ b/VidCoder/Resources/OptionsRes.resx
@@ -399,6 +399,6 @@
     <value>The worker process option will take effect after you exit and restart VidCoder.</value>
   </data>
   <data name="CopyLogToCustomFolderLabel" xml:space="preserve">
-    <value>Copy the encode log to a custom directory:</value>
+    <value>Copy the encode log to a custom folder</value>
   </data>
 </root>
